# self-evolving-agent-demo

./: .gitignore  pyproject.toml
src/01_adk_get_started/: agent.py
src/01_adk_get_started/02_third_party_agent_weather_bot/: litellm_agent_demo.ipynb
src/01_adk_get_started/03_multi_agents_weather_bot/: Untitled.ipynb
src/02_mcp/p1_mcp_agent/: agent.py
src/02_mcp/p2_my_mcp_agent/: agent.py
src/02_mcp/p2_my_mcp_agent/my_mcp_server/: self_evolving_mcp.py
